adding js support

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crochet Cookbook</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="home.css">
 </head>
 <body>
   <header>
@@ -37,12 +37,17 @@
         <a href="#" class="view-button">View Pattern</a>
       </div>
       <div class="pattern-card">
-        <img src="assets/hero-image.jpg" alt="Sample Pattern">
-        <h3>Sample Pattern</h3>
-        <p>This is a sample pattern description.</p>
+        <img src="assets/amigurumi-bunny.jpg" alt="Amigurumi Bunny">
+        <h3>Amigurumi Bunny</h3>
+        <p>A cute bunny amigurumi pattern.</p>
         <a href="#" class="view-button">View Pattern</a>
       </div>
-      <!-- Add more featured patterns as needed -->
+      <div class="pattern-card">
+        <img src="assets/winter-scarf.jpg" alt="Winter Scarf">
+        <h3>Winter Scarf</h3>
+        <p>A cozy scarf perfect for winter.</p>
+        <a href="#" class="view-button">View Pattern</a>
+      </div>
     </div>
   </section>
 
@@ -61,7 +66,6 @@
         <img src="assets/wearables-icon.png" alt="Wearables">
         <h3>Wearables</h3>
       </div>
-      <!-- Add more categories as needed -->
     </div>
   </section>
 
