--- a/patterns.html
+++ b/patterns.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Patterns - Crochet Cookbook</title>
-  <link rel="stylesheet" href="patterns.css">
+  <link rel="stylesheet" href="home.css"> <!-- General styles -->
+  <link rel="stylesheet" href="patterns.css"> <!-- Page-specific styles -->
 </head>
 <body>
   <header>
-    <div class="logo">Crochet Cookbook</div>
+    <div class="logo"><a href="index.html">Crochet Cookbook</a></div>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -34,6 +35,7 @@
         <label><input type="checkbox" name="category" value="blankets"> Blankets</label>
         <label><input type="checkbox" name="category" value="amigurumi"> Amigurumi</label>
         <label><input type="checkbox" name="category" value="wearables"> Wearables</label>
+        <label><input type="checkbox" name="category" value="accessories"> Accessories</label>
       </div>
     </aside>
 
@@ -41,6 +43,13 @@
     <section class="patterns-grid" id="patterns-grid">
       <!-- Patterns will be dynamically inserted here by JavaScript -->
     </section>
+
+    <!-- Pagination -->
+    <div class="pagination" id="pagination">
+      <button id="prev-page">Previous</button>
+      <span id="page-info"></span>
+      <button id="next-page">Next</button>
+    </div>
   </main>
 
   <footer>
@@ -53,6 +62,6 @@
   </footer>
 
   <!-- JavaScript to Load Patterns -->
-  <script src="scripts.js"></script>
+  <script src="patterns.js"></script>
 </body>
 </html>
