--- a/patterns.html
+++ b/patterns.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <div class="logo"><a href="index.html">Crochet Cookbook</a></div>
+    <div ><a href="index.html" class="logo">Crochet Cookbook</a></div>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -53,7 +53,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2023 Crochet Cookbook</p>
+    <p>&copy; 2025 Crochet Cookbook</p>
     <div class="social-links">
       <a href="#">Instagram</a>
       <a href="#">Pinterest</a>
