reformat file structure

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Crochet Cookbook</title>
-  <link rel="stylesheet" href="home.css">
+  <title>Crochet Catalogue</title>
+  <link rel="stylesheet" href="css/shared.css">
+  <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
   <header>
-    <div><a href="index.html" class="logo">Crochet Cookbook</a></div>
+    <div><a href="index.html" class="logo">Crochet Catalogue</a></div>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="patterns.html">Patterns</a></li>
-        <li><a href="#">Categories</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
@@ -22,7 +22,7 @@
 
   <section class="hero">
     <div class="hero-content">
-      <h1>Stitch Your Masterpiece with Our Crochet Recipes</h1>
+      <h1>A Catalouge of my creations</h1>
       <a href="patterns.html" class="cta-button">Explore Patterns</a>
     </div>
   </section>
@@ -31,24 +31,6 @@
     <h2>Random Patterns</h2>
     <div class="pattern-grid" id="patterns-grid">
       <!-- Random patterns will be dynamically inserted here by JavaScript -->
-    </div>
-  </section>
-
-  <section class="categories">
-    <h2>Categories</h2>
-    <div class="category-grid">
-      <div class="category-card">
-        <img src="assets/blanket-icon.png" alt="Blankets">
-        <h3>Blankets</h3>
-      </div>
-      <div class="category-card">
-        <img src="assets/amigurumi-icon.png" alt="Amigurumi">
-        <h3>Amigurumi</h3>
-      </div>
-      <div class="category-card">
-        <img src="assets/wearables-icon.png" alt="Wearables">
-        <h3>Wearables</h3>
-      </div>
     </div>
   </section>
 
@@ -62,6 +44,6 @@
   </footer>
 
   <!-- JavaScript to Load Featured Patterns -->
-  <script src="scripts.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
