--- a/pattern-details.html
+++ b/pattern-details.html
@@ -3,18 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pattern Details - Crochet Cookbook</title>
-  <link rel="stylesheet" href="home.css"> <!-- General styles -->
-  <link rel="stylesheet" href="pattern-details.css"> <!-- Page-specific styles -->
+  <title>Pattern Details - Crochet Catalogue</title>
+  <link rel="stylesheet" href="css/home.css"> <!-- General styles -->
+  <link rel="stylesheet" href="css/pattern-details.css"> <!-- Page-specific styles -->
 </head>
 <body>
   <header>
-    <div><a href="index.html" class="logo">Crochet Cookbook</a></div>
+    <div><a href="index.html" class="logo">Crochet Catalogue</a></div>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="patterns.html">Patterns</a></li>
-        <li><a href="#">Categories</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
@@ -64,6 +63,6 @@
   </footer>
 
   <!-- JavaScript to Load Pattern Details -->
-  <script src="pattern-details.js"></script>
+  <script src="js/pattern-details.js"></script>
 </body>
 </html>
