--- a/patterns.html
+++ b/patterns.html
@@ -3,18 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Patterns - Crochet Cookbook</title>
-  <link rel="stylesheet" href="home.css"> <!-- General styles -->
-  <link rel="stylesheet" href="patterns.css"> <!-- Page-specific styles -->
+  <title>Patterns - Crochet Catalogue</title>
+  <link rel="stylesheet" href="css/home.css"> <!-- General styles -->
+  <link rel="stylesheet" href="css/patterns.css"> <!-- Page-specific styles -->
 </head>
 <body>
   <header>
-    <div ><a href="index.html" class="logo">Crochet Cookbook</a></div>
+    <div ><a href="index.html" class="logo">Crochet Catalogue</a></div>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="patterns.html">Patterns</a></li>
-        <li><a href="#">Categories</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
@@ -62,6 +61,6 @@
   </footer>
 
   <!-- JavaScript to Load Patterns -->
-  <script src="patterns.js"></script>
+  <script src="js/patterns.js"></script>
 </body>
 </html>
