changed the color palette

--- a/pattern-details.html
+++ b/pattern-details.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pattern Details - Crochet Catalogue</title>
-  <link rel="stylesheet" href="css/home.css"> <!-- General styles -->
+  <link rel="stylesheet" href="css/shared.css">
   <link rel="stylesheet" href="css/pattern-details.css"> <!-- Page-specific styles -->
 </head>
 <body>
